2004-10-31  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.c (mips_cannot_change_mode_class): Use a stricter
	mode check.

2004-10-31  Kazu Hirata  <kazu@cs.umass.edu>

	* c-common.c: Fix a comment typo.

2004-10-31  Jason Merrill  <jason@redhat.com>

	PR middle-end/17526
	* tree-gimple.c (is_gimple_mem_rhs): Also require a val for
	aggregate types that are not BLKmode.

2004-10-30  Ziemowit Laski  <zlaski@apple.com>

	* c-common.h (objc_lookup_ivar): Add second parameter to
	prototype.
	* c-typeck.c (build_external_ref): After looking up symbol,
	pass it to objc_lookup_ivar() to decide whether it or the
	ivar should be used, rather than deciding the issue locally.
	* stub-objc.c (objc_lookup_ivar): Add an OTHER parameter,
	which is simply returned in the non-ObjC case.

2004-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* sdbout.c (sdbout_symbol): Do not output type .def statements
	for builtin types.

2004-10-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* c-common.c (catenate_strings): New.
	(c_parse_error): Use it.  Don't over-escape.

2004-10-30  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (calc_live_regs): Declare reg as unsigned and
	modify the for loop expressions for it.  Remove unnecessary casts.
	(sh_expand_prologue): Declare reg as unsigned.
	(sh_gimplify_va_arg_expr): Initinalize lab_over.
	(sh_handle_sp_switch_attribute): Add const qualifier appropriately.

2004-10-30  Geoffrey Keating  <geoffk@apple.com>

	* doc/invoke.texi (Darwin Options): Improve description of
	how the subtype is chosen.

2004-10-30  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/18096
	* config/rs6000/rs6000.c (rs6000_emit_allocate_stack): Check that
	the stack adjustment, "size", is valid for Pmode.  If the stack
	frame is too large, generate a trap insn and issue a warning.

2004-10-30  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-dom.c: Fix comment typos.

2004-10-30  Kaz Kojima  <kkojima@gcc.gnu.org>
